Added test structure for UserDTO Modify settings, pom.xml with a new plugin Added DataBuilder structure for UserDTO